--- a/money-service/src/docs/asciidoc/money-success.adoc
+++ b/money-service/src/docs/asciidoc/money-success.adoc
@@ -1,15 +1,14 @@
-== 머니(Money)
+== 정상 응답(Success)
+머니 서비스 기능에 대한 정상 응답을 제공합니다.
 
-머니에 대한 기능을 제공합니다.
-
-=== 지갑생성
+=== 지갑 생성
 operation::money-api-test/create-wallet[snippets='http-request,http-response,request-headers,response-fields']
 
-=== 지갑조회
+=== 지갑 조회
 operation::money-api-test/get-wallet[snippets='http-request,http-response,request-headers,response-fields']
 
-=== 머니충전
-operation::money-api-test/save-money[snippets='http-request,http-response,request-headers,request-fields,response-fields']
+=== 머니 충전
+operation::money-api-test/charge-money[snippets='http-request,http-response,request-headers,request-fields,response-fields']
 
-=== 머니송금
+=== 머니 송금
 operation::money-api-test/send-money[snippets='http-request,http-response,request-headers,request-fields,response-fields']
